[package]
name = "bevy_experiments"
version = "0.1.0"
authors = ["Nehliin <oskar.d.nehlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1


[dependencies]
bevy = "0.1.2"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
env_logger = "0.7.1"